feat: add computer floating point limits function

--- a/algorithms/floating_point.ipynb
+++ b/algorithms/floating_point.ipynb
@@ -91,11 +91,55 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "metadata": {},
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": "2"
+    }
+   },
    "outputs": [],
    "source": [
     "assert convert_from_decimal_to_base(23, 2) == '10111'\n",
     "assert convert_from_decimal_to_base(0.875, 2) == '0.111'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Get computer floating point limits\n",
+    "\n",
+    "This code gets the limits of the floating point numbers in the computer that is running the code."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_computer_floating_point_limits():\n",
+    "    import sys\n",
+    "    return sys.float_info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sys.float_info(max=1.7976931348623157e+308, max_exp=1024, max_10_exp=308, min=2.2250738585072014e-308, min_exp=-1021, min_10_exp=-307, dig=15, mant_dig=53, epsilon=2.220446049250313e-16, radix=2, rounds=1)"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_computer_floating_point_limits()"
    ]
   }
  ],
